--- a/index.html
+++ b/index.html
@@ -5,6 +5,36 @@
     <meta name="viewport" content="widt, initial-scale=1.0">
     <title>SERIEFLIX - Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <style type="text/css">
+        body, html {
+            height: 100%;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            color: #fff;
+            display: flex;
+            justify-content: center;
+            aling-items: center;
+        }
+        .background {
+            background-image: url('img/fundo.jpg');
+            background-size: cover;
+            background-position: center;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            filter: brightness(0.7)i;
+        }
+        .content {
+            text-align: center;
+        }
+
+
+    </style>
+
 </head>
 <body>
     <div class="background"></div>
