--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: Arial, sans-serif;
             color: #fff;
             display: flex;
-            justify-content: center;
+            justify-content: center;    
             aling-items: center;
         }
         .background {
@@ -31,14 +31,57 @@
         .content {
             text-align: center;
         }
-
+        .content h1 {
+            font-size: 6rem;
+            color: #007bff;
+        }
 
     </style>
-
 </head>
 <body>
     <div class="background"></div>
 
+    <div class="content">
+        <h1>SERIE FLIX</h1>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+    </div>
+
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="loginModalLabel">Login</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="loginForm">
+                        <div class="mb-3">
+                            <label for="username" class="form-label">Usuário</label>
+                            <input type="text" class="form-control" id="username" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Senha</label>
+                            <input type="password" class="form-control" id="password" required>
+                        </div>
+                        <button type="button" class="btn btn-primary" onclick="authenticate ()">Entrar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        function authenticate() {
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+
+            if (username === 'admin' && password === 'admin') {
+                window.location.href = 'principal.html';
+            } else {
+                alert('Usuário ou senha incorretos!');
+            }
+        }
+    </script>
 </body>
 </html>
