--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             color: #fff;
             display: flex;
             justify-content: center;    
-            aling-items: center;
+            align-items: center;
         }
         .background {
             background-image: url('img/fundo.jpg');
