--- a/principal.html
+++ b/principal.html
@@ -26,9 +26,25 @@
           text-align: center;
           padding-top: 20px;
         }
+
+        .logo {
+          width: 80px;
+          height: auto;
+        }
       </style>
 </head>
 <body>
+
+  <div class="container-fluid">
+    <div class="row align-items-center">
+      <div class="col-auto">
+        <img src="img/logo.png" alt="logo" class="logo">
+      </div>
+      <div class="col">
+      <h1 class="display-6 text-light">Bem-vindo á Plataforma de Séries e Filmes</h1>
+      </div>
+    </div>
+  </div>
 
     <div class="overlay"></div>
     <!--Conteúdo Principal-->
