--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
     <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header" style="color: black;">
                     <h5 class="modal-title" id="loginModalLabel">Login</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form id="loginForm">
                         <div class="mb-3">
-                            <label for="username" class="form-label">Usuário</label>
+                            <label for="username" class="form-label" style="color: black;">Usuário</label>
                             <input type="text" class="form-control" id="username" required>
                         </div>
                         <div class="mb-3">
-                            <label for="password" class="form-label">Senha</label>
+                            <label for="password" class="form-label" style="color: black;">Senha</label>
                             <input type="password" class="form-control" id="password" required>
                         </div>
                         <button type="button" class="btn btn-primary" onclick="authenticate ()">Entrar</button>
