--- a/principal.html
+++ b/principal.html
@@ -66,11 +66,11 @@
                 <div class="modal-body">
                     <form id="loginForm">
                         <div class="mb-3">
-                            <label for="username" class="form-label">Usuário</label>
+                            <label for="username" class="form-label" style="color: black;">Usuário</label>
                             <input type="text" class="form-control" id="username" required>
                         </div>
                         <div class="mb-3">
-                            <label for="password" class="form-label">Senha</label>
+                            <label for="password" class="form-label" style="color: black;">Senha</label>
                             <input type="password" class="form-control" id="password" required>
                         </div>
                         <button type="submit" class="btn btn-primary">Entrar</button>
@@ -84,7 +84,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="serieModalLabel">Título da Série</h5>
+                    <h5 class="modal-title" id="serieModalLabel" style="color: black;">Título da Série</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -107,15 +107,15 @@
                 <div class="modal-body">
                     <form>
                         <div class="mb-3">
-                            <label for="cardNumber">Número do Cartão</label>
+                            <label for="cardNumber" style="color: black;">Número do Cartão</label>
                             <input type="text" class="form-control" id="cardNumber" required>
                         </div>
                         <div class="mb-3">
-                            <label for="expirationDate" class="form-label">Data de Expiração</label>
+                            <label for="expirationDate" class="form-label" style="color: black;">Data de Expiração</label>
                             <input type="text" class="form-control" id="expirationDate" placeholder="MM/YY" required>
                         </div>
                         <div class="mb-3">
-                            <label for="cvv" class="form-label">CVV</label>
+                            <label for="cvv" class="form-label" style="color: black;">CVV</label>
                             <input type="text" class="form-control" id="cvv" required>
                         </div>
                         <button type="submit" class="btn btn-success">Pagar</button>
