--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             height: 100%;
             margin: 0;
             font-family: Arial, sans-serif;
-            color: #007bff;
+            color: #fff;
             display: flex;
             justify-content: center;    
             align-items: center;
