--- a/principal.html
+++ b/principal.html
@@ -104,7 +104,7 @@
                     <h5 class="modal-title" id="paymentModalLabel">Pagamento da Mensalidade</h5>
                     <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" style="color: black;">
                     <form>
                         <div class="mb-3">
                             <label for="cardNumber" style="color: black;">Número do Cartão</label>
