--- a/principal.html
+++ b/principal.html
@@ -88,9 +88,9 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p id="serieDescription">Descrição da série...</p>
+                    <p id="serieDescription" style="color: black;">Descrição da série...</p>
                     <iframe id="serieVideo" width="100%" height="400" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    <p>Visualizações: <span id="serieViews">0</span></p>
+                    <p style="color: black;">Visualizações: <span id="serieViews">0</span></p>
                 </div>
             </div>
         </div>
